<resources>
    <string name="app_name">News Reader App</string>
    <string name="article_title">기사제목</string>
    <string name="article_title_long">기사제목 기사제목 기사제목 기사제목 기사제목 기사제목 기사제목 기사제목</string>
    <string name="article_contents_long">기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용 기사내용</string>
    <string name="agency_name">언론사 이름</string>
    <string name="date">작성날짜</string>
    <string name="article_image">Article Image</string>
    <string name="share_button">Share Button</string>
    <string name="bookmark_button">Bookmark Button</string>
    <string name="back_button">Back Button</string>
</resources>